reajuste ao verificar atletas por equipa